@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2024 The MZmine Development Team
+ * Copyright (c) 2004-2024 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -77,7 +77,9 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
     rangePcIndex = Objects.requireNonNullElse(model.getRangePc(), 0) - 1;
     metadataColumn = model.getMetadataColumn();
     selectedRows = model.getSelectedRows();
-    flists = model.getFlists();
+    // only aligned feature lists
+    flists = model.getFlists().stream().filter(flist -> flist.getNumberOfRawDataFiles() > 1)
+        .toList();
     abundance = model.getAbundance();
 
     final ScalingFunctions scalingFunction = model.getScalingFunction();
@@ -86,6 +88,11 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
     final ImputationFunctions imputationFunction = model.getImputationFunction();
     imputer = imputationFunction.getImputer();
     sampleTypeFilter = model.getSampleTypeFilter();
+  }
+
+  @Override
+  public void onFailedPreCondition() {
+    clearGui();
   }
 
   @Override
@@ -107,7 +114,7 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
       return false;
     }
 
-    if(sampleTypeFilter.isEmpty()) {
+    if (sampleTypeFilter.isEmpty()) {
       return false;
     }
 
@@ -127,6 +134,9 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
 
     pcaRowsResult = PCAUtils.performPCAOnRows(rowsSortedByAnnotationPrio, abundance, scaling,
         imputer, sampleTypeFilter);
+    if (pcaRowsResult == null) {
+      return;
+    }
     progressProvider.getAndIncrement();
 
     final PCAScoresProvider scores = new PCAScoresProvider(pcaRowsResult, "Scores", Color.RED,
@@ -160,19 +170,28 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
 
     if (rangePcIndex < components.size()) {
       model.setRangePc(rangePcIndex + 1);
-    } else {
+    } else if (!components.isEmpty()) {
       model.setRangePc(components.getLast());
     }
     if (domainPcIndex < components.size()) {
       model.setDomainPc(domainPcIndex + 1);
-    } else {
-      model.setDomainPc(components.getLast());
+    } else if (!components.isEmpty()) {
+      model.setDomainPc(components.getFirst());
     }
+  }
+
+  private void clearGui() {
+    model.setScoresDatasets(List.of());
+    model.setLoadingsDatasets(List.of());
+    model.setPcaResult(null);
+    model.getAvailablePCs().clear();
+    model.setDomainPc(1);
+    model.setRangePc(2);
   }
 
   @Override
   public String getTaskDescription() {
-    return STR."Computing PCA dataset for \{flists.get(0).getName()}";
+    return "Computing PCA dataset for %s".formatted(flists.getFirst().getName());
   }
 
   @Override
